[tool.poetry]
name = "sysdiagnose"
version = "0.1.0"
description = ""
authors = ["Robert Elwell <robert.elwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdiagnose"
description = "Sysdiagnose parser"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "docopt>=0.6.2",
    "graphviz>=0.20.1",
    "tabulate>=0.9.0",
    "biplist>=1.0.3",
    "python-dateutil>=2.8.2"
]
dynamic = ["version"]
package-dir = "=src"
packages = ["find_namespace:"]

[tool.setuptools.packages.find]
where = ["src"]
