[metadata]
name = sysdiagnose
version = 1.0.0
description = "Sysdiagnose analysis framework"
python_requires = >=3.6.0, <4.0.0
classifiers =
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
setup_requires = setuptools
install_requires =
  docopt>=0.6.2
  graphviz>=0.20.1
  tabulate>=0.9.0
  biplist>=1.0.3
  python-dateutil>=2.8.2

package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
